- Changed text in tutorial - Fixed issue with NoteInput being cut off on smaller screens

--- a/src/features/guitar_tab/components/notes/note.module.scss
+++ b/src/features/guitar_tab/components/notes/note.module.scss
@@ -59,7 +59,7 @@ $gtr_str_color: hsl(219, 7%, 48%);
   outline: 1px solid black;
   top: 50%;
   transform: translateY(-50%);
-  width: 90%;
+  width: calc(100% - 5px);
   left: 0;
   right: 0;
   border: none;
